--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -1,8 +1,6 @@
 .container {
-  background-color: rgba(0, 0, 0, 0.5);
-  border-bottom: 2px solid rgba(255, 255, 255, 0.5);
   display: flex;
   justify-content: center;
-  gap: 75px;
-  padding: 10px;
+  align-items: center;
+  gap: 20px;
 }
