--- a/src/styles/games.module.css
+++ b/src/styles/games.module.css
@@ -17,6 +17,7 @@
   flex: 1;
   flex-direction: column;
   justify-content: space-between;
+  width: 100%;
   border: 2px solid white;
   border-radius: 8px;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.3);
@@ -47,4 +48,11 @@
 
 .review_button {
   margin-bottom: 0px;
+}
+
+@media screen and (max-width: 800px) {
+  .game_container {
+    flex-direction: column;
+    align-items: center;
+  }
 }
