--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -76,7 +76,7 @@ body {
   border-radius: 8px;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.3);
   text-align: center;
-  font-size: 18px;
+  font-size: 22px;
   font-weight: 700;
   text-transform: uppercase;
   text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.3);
@@ -92,6 +92,22 @@ body {
 
 p,
 li {
-  font-size: 18px;
+  font-size: 22px;
   text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.3);
+}
+
+input,
+textarea,
+select {
+  font-size: 18px;
+  background-color: white;
+  border: 2px solid white;
+  border-radius: 8px;
+  box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.3);
+  color: black;
+  padding: 5px 8px 5px 8px;
+}
+
+select:hover {
+  cursor: pointer;
 }
