--- a/src/styles/game.module.css
+++ b/src/styles/game.module.css
@@ -39,11 +39,23 @@
 }
 
 .review {
+  display: flex;
+  flex-direction: column;
   border: 2px solid white;
   border-radius: 8px;
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.3);
   padding: 20px;
+  gap: 12px;
+}
+
+.review_buttons_container {
+  display: flex;
   gap: 20px;
+}
+
+.button {
+  margin: 0px;
+  width: 110px;
 }
 
 .review_button {
