--- a/src/styles/gamesList.module.css
+++ b/src/styles/gamesList.module.css
@@ -1,3 +1,15 @@
+.filter_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 20px;
+  max-width: 100%;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 20px;
+}
+
 .games_container {
   display: flex;
   flex-direction: column;
@@ -48,6 +60,10 @@
 .button {
   margin: 0px;
   width: 190px;
+}
+
+.category_button {
+  margin: 0px;
 }
 
 @media screen and (max-width: 650px) {
