--- a/src/styles/gamesList.module.css
+++ b/src/styles/gamesList.module.css
@@ -44,6 +44,7 @@
   gap: 12px;
   width: 100%;
   padding: 20px;
+  overflow-x: auto;
 }
 
 .game_description {
@@ -67,7 +68,14 @@
 }
 
 @media screen and (max-width: 650px) {
+  .game_cover {
+    display: none;
+  }
   .game_buttons_container {
     flex-direction: column;
+  }
+  .button {
+    width: auto;
+    max-width: 190px;
   }
 }
