--- a/src/styles/navbar.module.css
+++ b/src/styles/navbar.module.css
@@ -3,4 +3,10 @@
   justify-content: center;
   align-items: center;
   gap: 20px;
+  padding-bottom: 20px;
+  flex-wrap: wrap;
+}
+
+.nav_button {
+  margin: 0px;
 }
