--- a/src/styles/gamesList.module.css
+++ b/src/styles/gamesList.module.css
@@ -33,7 +33,7 @@
   border-radius: 0px;
   border-top-left-radius: 6px;
   border-bottom-left-radius: 6px;
-  object-fit: contain;
+  object-fit: cover;
 }
 
 .game_info_container {
