--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -52,12 +52,12 @@ body {
 .background-overlay {
   background-image: url("/images/background-overlay.png");
   position: fixed;
+  opacity: 0.12;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   z-index: -1;
-  opacity: 0.12;
 }
 
 .page-content {
@@ -80,6 +80,7 @@ body {
   text-align: center;
   text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.3);
   padding: 20px;
+  text-transform: uppercase;
 }
 
 .subheading {
